feat: 部分偏移更新

--- a/doc/3.9.2.26.md
+++ b/doc/3.9.2.26.md
@@ -1,5 +1,16 @@
 ﻿##  3.9.2.26版本，预览功能没有的接口，不能使用，文档仅供参考。
 #### 功能预览：
+0.检查是否登录     
+1.获取登录微信信息  
 2.发送文本    
 5.发送图片  
 6.发送文件  
+9.hook消息  
+10.取消hook消息  
+25.获取群成员  
+26.获取群成员昵称  
+27.删除群成员   
+28.增加群成员    
+31.修改群昵称  
+32.获取数据库句柄     
+34.查询数据库    
