--- a/doc/3.9.2.26.md
+++ b/doc/3.9.2.26.md
@@ -3,10 +3,14 @@
 0.检查是否登录     
 1.获取登录微信信息  
 2.发送文本    
+3.发送@文本   
 5.发送图片  
 6.发送文件  
 9.hook消息  
 10.取消hook消息  
+19.通过手机或qq查找微信  
+20.通过wxid添加好友      
+23.通过好友申请    
 25.获取群成员  
 26.获取群成员昵称  
 27.删除群成员   
@@ -14,3 +18,6 @@
 31.修改群昵称  
 32.获取数据库句柄     
 34.查询数据库    
+40.转发消息      
+44.退出登录   
+55.获取联系人或者群名称    
