--- a/doc/3.9.2.23.md
+++ b/doc/3.9.2.23.md
@@ -635,6 +635,7 @@
 |---|---|---|---|
 |v3 |true |string| 添加好友消息内容里的encryptusername|
 |v4 |true |string| 添加好友消息内容里的ticket|
+|permission |true |string| 0|
 
 ###### 返回字段
 |返回字段|字段类型|说明                              |
@@ -647,7 +648,10 @@
 入参：
 ``` javascript
 {
-    "wxid":"wxid_o1112222"
+    
+    "v3":"v3",
+    "v4":"v4",
+    "permission":"0"
 }
 ```
 响应：
