通过好友请求接口描述

--- a/doc/3.9.2.23.md
+++ b/doc/3.9.2.23.md
@@ -635,7 +635,7 @@
 |---|---|---|---|
 |v3 |true |string| 添加好友消息内容里的encryptusername|
 |v4 |true |string| 添加好友消息内容里的ticket|
-|permission |true |string| 0|
+|permission |true |string|好友权限,0是无限制,1是不让他看我,2是不看他,3是1+2|
 
 ###### 返回字段
 |返回字段|字段类型|说明                              |
