feat: 完善3.9.2.26已有的功能

--- a/doc/3.9.2.26.md
+++ b/doc/3.9.2.26.md
@@ -18,6 +18,19 @@
 31.修改群昵称  
 32.获取数据库句柄     
 34.查询数据库    
+35.hook日志   
+36.关闭hook日志   
 40.转发消息      
 44.退出登录   
+46.联系人列表  
+47.获取群详情    
+48.获取解密图片  
+49.图片提取文字ocr  
+50.拍一拍  
+51.群消息置顶消息  
+52.群消息取消置顶  
+53.朋友圈首页
+54.朋友圈下一页  
 55.获取联系人或者群名称    
+56.获取消息附件(图片，视频，文件)    
+57.获取消息语音文件   
