feat: 获取群成员详情

--- a/doc/3.9.2.26.md
+++ b/doc/3.9.2.26.md
@@ -36,6 +36,7 @@
 57.获取消息语音文件   
 58.登录二维码   
 59.邀请入群   
+60.获取群/群成员详情    
 
 
 ### 接口文档：
@@ -1694,4 +1695,52 @@
 响应：
 ``` javascript
 {"code":1,"result":"OK"}
+```
+
+
+#### 60.群/群成员详情**
+###### 接口功能
+> 邀请入群
+
+###### 接口地址
+> [/api/?type=60](/api/?type=60)
+
+###### HTTP请求方式
+> POST  JSON
+
+###### 请求参数
+|参数|必选|类型|说明|
+|---|---|---|---|
+|wxid|string|wxid|
+
+   
+
+###### 返回字段
+|返回字段|字段类型|说明                              |
+|---|---|---|
+|code|int|返回状态,1成功, 非0失败|
+|result|string|成功提示|
+
+
+
+
+###### 接口示例
+入参：
+``` javascript
+{
+    "wxid":"wxid_8888"
+}
+
+```
+响应：
+``` javascript
+{
+    "account": "lllla",
+    "code": 1,
+    "headImage": "",
+    "nickname": "昵称",
+    "result": "OK",
+    "v3": "v3_020b3sssd031xxxxx05@stranger",
+    "wxid": "wxid_888888"
+}
 ```
