--- a/doc/3.9.2.26.md
+++ b/doc/3.9.2.26.md
@@ -1744,3 +1744,42 @@
     "wxid": "wxid_888888"
 }
 ```
+
+#### 61.撤回消息**
+###### 接口功能
+> 撤回消息，有时间限制。
+
+###### 接口地址
+> [/api/?type=60](/api/?type=61)
+
+###### HTTP请求方式
+> POST  JSON
+
+###### 请求参数
+|参数|必选|类型|说明|
+|---|---|---|---|
+|msgId|string|消息id|
+
+   
+
+###### 返回字段
+|返回字段|字段类型|说明                              |
+|---|---|---|
+|code|int|返回状态,1成功, 非0失败|
+|result|string|成功提示|
+
+
+
+
+###### 接口示例
+入参：
+``` javascript
+{
+    "msgId":45645454654654874548888
+}
+
+```
+响应：
+``` javascript
+{"code":1,"result":"OK"}
+```
