--- a/doc/3.9.2.26.md
+++ b/doc/3.9.2.26.md
@@ -39,7 +39,7 @@
 60.获取群/群成员详情    
 61.撤回消息    
 62.发送公众号消息   
-
+63.转发公众号消息   
 
 
 ### 接口文档：
@@ -1753,7 +1753,7 @@
 > 撤回消息，有时间限制。
 
 ###### 接口地址
-> [/api/?type=60](/api/?type=61)
+> [/api/?type=61](/api/?type=61)
 
 ###### HTTP请求方式
 > POST  JSON
@@ -1793,7 +1793,7 @@
 > 公众号文章分享/转发的功能
 
 ###### 接口地址
-> [/api/?type=60](/api/?type=61)
+> [/api/?type=62](/api/?type=62)
 
 ###### HTTP请求方式
 > POST  JSON
@@ -1828,6 +1828,45 @@
     "url": "http://mp.weixin.qq.com/s?__biz=Mzg3MzY2MjgxMg==&mid=2247712540&idx=1&sn=bd8e8b0d9f2753f3c34a2bfc01770510&chksm=ced16f2ff9a6e639cc9bb76631ff03487f86486f0f29fcf9f8bed754354cb20eda31cc894a56&scene=0&xtrack=1#rd",
     "thumburl": "https://mmbiz.qpic.cn/sz_mmbiz_jpg/tpzwaqMCicQyEkBtLgibrKXVKD5gGUEtL00rJ2pxmpmmP9KgoBHiciamYhqZ0ff4kNlnPpnATqozxgRq4AtEzibo4iaw/640?wxtype=jpeg&wxfrom=0",
     "digest": "这谁顶得住？",
+    "wxid": "filehelper"
+}
+
+```
+响应：
+``` javascript
+{"code":0,"result":"OK"}
+```
+
+#### 63.转发公众号消息**
+###### 接口功能
+> 转发收到的公众号的文章
+
+###### 接口地址
+> [/api/?type=63](/api/?type=63)
+
+###### HTTP请求方式
+> POST  JSON
+
+###### 请求参数
+|参数|必选|类型|说明|
+|---|---|---|---|
+|msgId|string|收到的消息msgId,type=49|
+|wxid|string|接收人wxid|
+
+###### 返回字段
+|返回字段|字段类型|说明                              |
+|---|---|---|
+|code|int|返回状态,1成功, 非0失败|
+|result|string|成功提示|
+
+
+
+
+###### 接口示例
+入参：
+``` javascript
+{
+    "msgId": "123456456456",
     "wxid": "filehelper"
 }
 
