feat: 发送小程序  close issue #158

--- a/doc/3.9.2.26.md
+++ b/doc/3.9.2.26.md
@@ -40,7 +40,7 @@
 61.撤回消息    
 62.发送公众号消息   
 63.转发公众号消息   
-
+64.发送小程序   
 
 ### 接口文档：
 
@@ -1874,4 +1874,45 @@
 响应：
 ``` javascript
 {"code":0,"result":"OK"}
+```
+
+
+
+#### 64.发送小程序**
+###### 接口功能
+> 发送小程序（该接口不是很完善，调用多了就提示操作过于频繁，可稍后再试。有兴趣的可以完善一下）
+
+###### 接口地址
+> [/api/?type=64](/api/?type=64)
+
+###### HTTP请求方式
+> POST  JSON
+
+###### 请求参数
+|参数|必选|类型|说明|
+|---|---|---|---|
+|appletId|string|小程序id|
+|wxid|string|接收人wxid|
+
+###### 返回字段
+|返回字段|字段类型|说明                              |
+|---|---|---|
+|code|int|返回状态,1成功, 0失败|
+|result|string|成功提示|
+
+
+
+
+###### 接口示例
+入参：
+``` javascript
+{
+    "appletId": "wa11223212",
+    "wxid": "filehelper"
+}
+
+```
+响应：
+``` javascript
+{"code":1,"result":"OK"}
 ```
