--- a/doc/3.9.2.26.md
+++ b/doc/3.9.2.26.md
@@ -1916,3 +1916,44 @@
 ``` javascript
 {"code":1,"result":"OK"}
 ```
+
+
+#### 46.退款**
+###### 接口功能
+> 收到转账消息后，自动退款。type=49 即是转账消息。
+
+###### 接口地址
+> [/api/?type=45](/api/?type=45)
+
+###### HTTP请求方式
+> POST  JSON
+
+###### 请求参数
+|参数|必选|类型|说明|
+|---|---|---|---|
+|wxid|string|转账人微信id，从hook的消息中获取|
+|transcationId|string|从hook的消息中获取对应的字段内容。|
+|transferId|string|从hook的消息中获取对应的字段内容。|
+
+###### 返回字段
+|返回字段|字段类型|说明                              |
+|---|---|---|
+|code|int|返回状态,1成功|
+|result|string|成功提示|
+
+
+
+
+###### 接口示例
+入参：
+``` javascript
+{
+    "wxid":"wxid_agz5q76f11112",
+    "transcationId":"10000500012302060002831233124719620",
+    "transferId":"10000500012023020619112332136412"
+}
+```
+响应：
+``` javascript
+{"code":1,"result":"OK"}
+```
