--- a/doc/3.9.2.26.md
+++ b/doc/3.9.2.26.md
@@ -41,6 +41,8 @@
 62.发送公众号消息   
 63.转发公众号消息   
 64.发送小程序   
+65.退款    
+66.下载头像         
 
 ### 接口文档：
 
@@ -1923,7 +1925,7 @@
 > 收到转账消息后，自动退款。type=49 即是转账消息。
 
 ###### 接口地址
-> [/api/?type=45](/api/?type=65)
+> [/api/?type=65](/api/?type=65)
 
 ###### HTTP请求方式
 > POST  JSON
@@ -1951,6 +1953,46 @@
     "wxid":"wxid_agz5q76f11112",
     "transcationId":"10000500012302060002831233124719620",
     "transferId":"10000500012023020619112332136412"
+}
+```
+响应：
+``` javascript
+{"code":1,"result":"OK"}
+```
+
+
+#### 66.查询或下载头像**
+###### 接口功能
+> 暂时没用的功能
+
+###### 接口地址
+> [/api/?type=66](/api/?type=66)
+
+###### HTTP请求方式
+> POST  JSON
+
+###### 请求参数
+|参数|必选|类型|说明|
+|---|---|---|---|
+|wxid|string|微信id|
+|imageUrl|string|头像地址|
+
+
+###### 返回字段
+|返回字段|字段类型|说明                              |
+|---|---|---|
+|code|int|返回状态,1成功|
+|result|string|成功提示|
+
+
+
+
+###### 接口示例
+入参：
+``` javascript
+{
+    "wxid":"wxid_agz5q76f11112",
+    "imageUrl":""
 }
 ```
 响应：
