feat: hook消息增加http支持

--- a/doc/3.9.2.26.md
+++ b/doc/3.9.2.26.md
@@ -284,7 +284,10 @@
 
 #### 9.hook消息**
 ###### 接口功能
-> hook接收文本消息，图片消息，群消息.该接口将hook的消息通过tcp回传给本地的端口
+> hook接收文本消息，图片消息，群消息.该接口将hook的消息通过tcp回传给本地的端口。
+enableHttp=1时，使用url，timeout参数配置服务端的接收地址。请求为post，Content-Type 为json。
+enableHttp=0时，使用ip，port的tcp服务回传消息。
+ 
 
 ###### 接口地址
 > [/api/?type=9](/api/?type=9)
@@ -297,6 +300,9 @@
 |---|---|---|---|
 |port |true |string| 本地服务端端口，用来接收消息内容 |
 |ip |true |string| 服务端ip地址，用来接收消息内容，可以是任意ip,即tcp客户端连接的服务端的ip (3.8.1.26版本)|
+|url |true |string| http的请求地址，enableHttp=1时，不能为空 |
+|timeout |true |string| 超时时间，单位ms|
+|enableHttp |true |number| 0/1 ：1.启用http 0.不启用http|
 
 ###### 返回字段
 |返回字段|字段类型|说明                              |
