feat: 3.9.2.23同步3.9.2.26功能

--- a/doc/3.9.2.23.md
+++ b/doc/3.9.2.23.md
@@ -28,7 +28,7 @@
 36.关闭hook日志    
 40.转发消息     
 44.退出登录  
-<!-- 45.确认收款  -->
+45.确认收款 
 46.联系人列表  
 47.获取群详情  
 48.获取解密图片  
@@ -41,6 +41,15 @@
 55.获取联系人或者群名称    
 56.获取消息附件(图片，视频，文件)    
 57.获取消息语音文件   
+58.登录二维码   
+59.邀请入群   
+60.获取群/群成员详情    
+61.撤回消息    
+62.发送公众号消息   
+63.转发公众号消息   
+64.发送小程序   
+65.退款    
+66.下载头像    
 ### 接口文档：
 
 
@@ -1615,6 +1624,382 @@
    
 }
 
+```
+响应：
+``` javascript
+{"code":1,"result":"OK"}
+```
+
+
+#### 58.登录url**
+###### 接口功能
+> 登录的url，生成二维码即可扫描登录
+
+###### 接口地址
+> [/api/?type=58](/api/?type=58)
+
+###### HTTP请求方式
+> POST  JSON
+
+###### 请求参数
+|参数|必选|类型|说明|
+|---|---|---|---|
+
+   
+
+###### 返回字段
+|返回字段|字段类型|说明                              |
+|---|---|---|
+|code|int|返回状态,1成功, 非0失败|
+|result|string|成功提示|
+|url|string|登录url|
+
+
+
+###### 接口示例
+入参：
+``` javascript
+
+
+```
+响应：
+``` javascript
+{"code":1,"result":"OK"，"url":"https://weixin.qq.com/x/qqqqxxxxxx"}
+```
+
+
+#### 59.邀请入群**
+###### 接口功能
+> 邀请入群
+
+###### 接口地址
+> [/api/?type=58](/api/?type=58)
+
+###### HTTP请求方式
+> POST  JSON
+
+###### 请求参数
+|参数|必选|类型|说明|
+|---|---|---|---|
+|chatRoomId|string|群id|
+|memberIds|string|成员id，以,分隔|
+   
+
+###### 返回字段
+|返回字段|字段类型|说明                              |
+|---|---|---|
+|code|int|返回状态,1成功, 非0失败|
+|result|string|成功提示|
+
+
+
+
+###### 接口示例
+入参：
+``` javascript
+{
+    "chatRoomId":"1111@chatroom",
+    "memberIds":"wxid_1111"
+}
+
+```
+响应：
+``` javascript
+{"code":1,"result":"OK"}
+```
+
+
+#### 60.群/群成员详情**
+###### 接口功能
+> 邀请入群
+
+###### 接口地址
+> [/api/?type=60](/api/?type=60)
+
+###### HTTP请求方式
+> POST  JSON
+
+###### 请求参数
+|参数|必选|类型|说明|
+|---|---|---|---|
+|wxid|string|wxid|
+
+   
+
+###### 返回字段
+|返回字段|字段类型|说明                              |
+|---|---|---|
+|code|int|返回状态,1成功, 非0失败|
+|result|string|成功提示|
+
+
+
+
+###### 接口示例
+入参：
+``` javascript
+{
+    "wxid":"wxid_8888"
+}
+
+```
+响应：
+``` javascript
+{
+    "account": "lllla",
+    "code": 1,
+    "headImage": "",
+    "nickname": "昵称",
+    "result": "OK",
+    "v3": "v3_020b3sssd031xxxxx05@stranger",
+    "wxid": "wxid_888888"
+}
+```
+
+#### 61.撤回消息**
+###### 接口功能
+> 撤回消息，有时间限制。
+
+###### 接口地址
+> [/api/?type=61](/api/?type=61)
+
+###### HTTP请求方式
+> POST  JSON
+
+###### 请求参数
+|参数|必选|类型|说明|
+|---|---|---|---|
+|msgId|string|消息id|
+
+   
+
+###### 返回字段
+|返回字段|字段类型|说明                              |
+|---|---|---|
+|code|int|返回状态,1成功, 非0失败|
+|result|string|成功提示|
+
+
+
+
+###### 接口示例
+入参：
+``` javascript
+{
+    "msgId":45645454654654874548888
+}
+
+```
+响应：
+``` javascript
+{"code":1,"result":"OK"}
+```
+
+
+#### 62.发送公众号消息**
+###### 接口功能
+> 公众号文章分享/转发的功能
+
+###### 接口地址
+> [/api/?type=62](/api/?type=62)
+
+###### HTTP请求方式
+> POST  JSON
+
+###### 请求参数
+|参数|必选|类型|说明|
+|---|---|---|---|
+|appname|string|消息xml中的appname|
+|username|string|消息xml中的username|
+|title|string|消息xml中的title，文章的title|
+|url|string|消息xml中的url，文章的uerl|
+|thumburl|string|消息xml中的thumburl，缩略图|
+|digest|string|消息xml中的digest|
+|wxid|string|接收人wxid|
+
+###### 返回字段
+|返回字段|字段类型|说明                              |
+|---|---|---|
+|code|int|返回状态,1成功, 非0失败|
+|result|string|成功提示|
+
+
+
+
+###### 接口示例
+入参：
+``` javascript
+{
+    "appname": "电手",
+    "username": "gh_271633b4f577",
+    "title": "PC硬件、数码产品彻底反转，搞机佬春天回来了",
+    "url": "http://mp.weixin.qq.com/s?__biz=Mzg3MzY2MjgxMg==&mid=2247712540&idx=1&sn=bd8e8b0d9f2753f3c34a2bfc01770510&chksm=ced16f2ff9a6e639cc9bb76631ff03487f86486f0f29fcf9f8bed754354cb20eda31cc894a56&scene=0&xtrack=1#rd",
+    "thumburl": "https://mmbiz.qpic.cn/sz_mmbiz_jpg/tpzwaqMCicQyEkBtLgibrKXVKD5gGUEtL00rJ2pxmpmmP9KgoBHiciamYhqZ0ff4kNlnPpnATqozxgRq4AtEzibo4iaw/640?wxtype=jpeg&wxfrom=0",
+    "digest": "这谁顶得住？",
+    "wxid": "filehelper"
+}
+
+```
+响应：
+``` javascript
+{"code":0,"result":"OK"}
+```
+
+#### 63.转发公众号消息**
+###### 接口功能
+> 转发收到的公众号的文章
+
+###### 接口地址
+> [/api/?type=63](/api/?type=63)
+
+###### HTTP请求方式
+> POST  JSON
+
+###### 请求参数
+|参数|必选|类型|说明|
+|---|---|---|---|
+|msgId|string|收到的消息msgId,type=49|
+|wxid|string|接收人wxid|
+
+###### 返回字段
+|返回字段|字段类型|说明                              |
+|---|---|---|
+|code|int|返回状态,1成功, 非0失败|
+|result|string|成功提示|
+
+
+
+
+###### 接口示例
+入参：
+``` javascript
+{
+    "msgId": "123456456456",
+    "wxid": "filehelper"
+}
+
+```
+响应：
+``` javascript
+{"code":0,"result":"OK"}
+```
+
+
+
+#### 64.发送小程序**
+###### 接口功能
+> 发送小程序（该接口不是很完善，调用多了就提示操作过于频繁，可稍后再试。有兴趣的可以完善一下）
+
+###### 接口地址
+> [/api/?type=64](/api/?type=64)
+
+###### HTTP请求方式
+> POST  JSON
+
+###### 请求参数
+|参数|必选|类型|说明|
+|---|---|---|---|
+|appletId|string|小程序id|
+|wxid|string|接收人wxid|
+
+###### 返回字段
+|返回字段|字段类型|说明                              |
+|---|---|---|
+|code|int|返回状态,1成功, 0失败|
+|result|string|成功提示|
+
+
+
+
+###### 接口示例
+入参：
+``` javascript
+{
+    "appletId": "wa11223212",
+    "wxid": "filehelper"
+}
+
+```
+响应：
+``` javascript
+{"code":1,"result":"OK"}
+```
+
+
+#### 65.退款**
+###### 接口功能
+> 收到转账消息后，自动退款。type=49 即是转账消息。
+
+###### 接口地址
+> [/api/?type=65](/api/?type=65)
+
+###### HTTP请求方式
+> POST  JSON
+
+###### 请求参数
+|参数|必选|类型|说明|
+|---|---|---|---|
+|wxid|string|转账人微信id，从hook的消息中获取|
+|transcationId|string|从hook的消息中获取对应的字段内容。|
+|transferId|string|从hook的消息中获取对应的字段内容。|
+
+###### 返回字段
+|返回字段|字段类型|说明                              |
+|---|---|---|
+|code|int|返回状态,1成功|
+|result|string|成功提示|
+
+
+
+
+###### 接口示例
+入参：
+``` javascript
+{
+    "wxid":"wxid_agz5q76f11112",
+    "transcationId":"10000500012302060002831233124719620",
+    "transferId":"10000500012023020619112332136412"
+}
+```
+响应：
+``` javascript
+{"code":1,"result":"OK"}
+```
+
+
+#### 66.查询或下载头像**
+###### 接口功能
+> 暂时没用的功能
+
+###### 接口地址
+> [/api/?type=66](/api/?type=66)
+
+###### HTTP请求方式
+> POST  JSON
+
+###### 请求参数
+|参数|必选|类型|说明|
+|---|---|---|---|
+|wxid|string|微信id|
+|imageUrl|string|头像地址|
+
+
+###### 返回字段
+|返回字段|字段类型|说明                              |
+|---|---|---|
+|code|int|返回状态,1成功|
+|result|string|成功提示|
+
+
+
+
+###### 接口示例
+入参：
+``` javascript
+{
+    "wxid":"wxid_agz5q76f11112",
+    "imageUrl":""
+}
 ```
 响应：
 ``` javascript
