feat: 修改好友备注

--- a/doc/3.9.2.23.md
+++ b/doc/3.9.2.23.md
@@ -50,6 +50,7 @@
 64.发送小程序   
 65.退款    
 66.下载头像    
+67.修改好友备注   
 ### 接口文档：
 
 
@@ -2005,6 +2006,48 @@
 ``` javascript
 {"code":1,"result":"OK"}
 ```
+
+
+
+#### 67.修改好友备注**
+###### 接口功能
+> 修改好友备注
+
+###### 接口地址
+> [/api/?type=67](/api/?type=67)
+
+###### HTTP请求方式
+> POST  JSON
+
+###### 请求参数
+|参数|必选|类型|说明|
+|---|---|---|---|
+|wxid|string|微信id|
+|remark|string|备注内容|
+
+
+###### 返回字段
+|返回字段|字段类型|说明                              |
+|---|---|---|
+|code|int|返回状态,1成功|
+|result|string|成功提示|
+
+
+
+
+###### 接口示例
+入参：
+``` javascript
+{
+    "wxid":"wxid_agz5q76f11112",
+    "remark":"123"
+}
+```
+响应：
+``` javascript
+{"code":1,"result":"OK"}
+```
+
 
 
 #### 感谢
