--- a/doc/3.9.2.23.md
+++ b/doc/3.9.2.23.md
@@ -303,7 +303,10 @@
 |参数|必选|类型|说明|
 |---|---|---|---|
 |port |true |string| 本地服务端端口，用来接收消息内容 |
-|ip |true |string| 服务端ip地址，用来接收消息内容，可以是任意ip,即tcp客户端连接的服务端的ip (3.8.1.26版本)|
+|ip |true |string| 服务端ip地址，用来接收消息内容，可以是任意ip,即tcp客户端连接的服务端的ip |
+|url |true |string| http的请求地址，enableHttp=1时，不能为空 |
+|timeout |true |string| 超时时间，单位ms|
+|enableHttp |true |number| 0/1 ：1.启用http 0.不启用http|
 
 ###### 返回字段
 |返回字段|字段类型|说明                              |
@@ -317,7 +320,10 @@
 ``` javascript
 {
     "port": "19099"
-    "ip":"127.0.0.1"
+    "ip":"127.0.0.1"，
+    "url":"http://test.com",
+    "timeout":"3000",
+    "enableHttp":1
 }
 ```
 响应：
