--- a/doc/3.9.5.81.md
+++ b/doc/3.9.5.81.md
@@ -77,7 +77,8 @@ data： 接口返回的数据
 ``` javascript
 {
     "code": 1,
-    "result": "ok"
+    "msg": "success",
+    "data":null
 }
 ```
 
@@ -102,18 +103,18 @@ data： 接口返回的数据
 |code|int|返回状态,1 成功, 0失败|
 |result|string|成功提示|
 |data|object|响应内容|
-|account|string|账号|
-|headImage|string|头像|
-|city|string|城市|
-|country|string|国家|
-|currentDataPath|string|当前数据目录,登录的账号目录|
-|dataSavePath|string|微信保存目录|
-|mobile|string|手机|
-|name|string|昵称|
-|province|string|省|
-|wxid|string|wxid|
-|signature|string|个人签名|
-|dbKey|string|数据库的SQLCipher的加密key，可以使用该key配合decrypt.py解密数据库
+|&#8194;&#8194;account|string|账号|
+|&#8194;&#8194;headImage|string|头像|
+|&#8194;&#8194;city|string|城市|
+|&#8194;&#8194;country|string|国家| 
+|&#8194;&#8194;currentDataPath|string|当前数据目录,登录的账号目录|
+|&#8194;&#8194;dataSavePath|string|微信保存目录|
+|&#8194;&#8194;mobile|string|手机|
+|&#8194;&#8194;name|string|昵称|
+|&#8194;&#8194;province|string|省|
+|&#8194;&#8194;wxid|string|wxid|
+|&#8194;&#8194;signature|string|个人签名|
+|&#8194;&#8194;dbKey|string|数据库的SQLCipher的加密key，可以使用该key配合decrypt.py解密数据库
 
 ###### 接口示例
 入参：
@@ -204,8 +205,9 @@ enableHttp=0时，使用ip，port的tcp服务回传消息。
 ###### 返回字段
 |返回字段|字段类型|说明                              |
 |---|---|---|
-|code|int|返回状态,1成功, 0失败|
-|result|string|成功提示|
+|code|int|返回状态,0成功, 非0失败|
+|data|object|null|
+|msg|string|成功提示|
 
 
 ###### 接口示例
@@ -221,5 +223,155 @@ enableHttp=0时，使用ip，port的tcp服务回传消息。
 ```
 响应：
 ``` javascript
-{"code":200,"msg":"success","data":null}
+{"code":0,"msg":"success","data":null}
+```
+
+#### 4.取消hook消息**
+###### 接口功能
+> 取消hook消息
+ 
+###### 接口地址
+> [/api/unhookSyncMsg](/api/unhookSyncMsg)
+
+###### HTTP请求方式
+> POST  JSON
+
+###### 请求参数
+|参数|必选|类型|说明|
+|---|---|---|---|
+
+
+###### 返回字段
+|返回字段|字段类型|说明                              |
+|---|---|---|
+|code|int|返回状态,0成功, 非0失败|
+|data|object|null|
+|msg|string|成功提示|
+
+
+###### 接口示例
+入参：
+``` javascript
+
+```
+响应：
+``` javascript
+{"code":0,"msg":"success","data":null}
+```
+
+#### 5.好友列表**
+###### 接口功能
+> 好友列表
+ 
+###### 接口地址
+> [/api/getContactList](/api/getContactList)
+
+###### HTTP请求方式
+> POST  JSON
+
+###### 请求参数
+|参数|必选|类型|说明|
+|---|---|---|---|
+
+
+###### 返回字段
+|返回字段|字段类型|说明                              |
+|---|---|---|
+|code|int|返回状态,0成功, 非0失败|
+|data|object|好友信息|
+|&#8194;&#8194;customAccount|string|自定义账号|
+|&#8194;&#8194;encryptName|string|昵称|
+|&#8194;&#8194;nickname|string|昵称|
+|&#8194;&#8194;pinyin|string|简拼|
+|&#8194;&#8194;pinyinAll|string|全拼|
+|&#8194;&#8194;reserved1|number|未知|
+|&#8194;&#8194;reserved2|number|未知|
+|&#8194;&#8194;type|number|未知|
+|&#8194;&#8194;verifyFlag|number|未知|
+|&#8194;&#8194;wxid|string|wxid|
+|msg|string|成功提示|
+
+
+###### 接口示例
+入参：
+``` javascript
+
+```
+响应：
+``` javascript
+{
+    "code": 1,
+    "data": [
+        {
+           "customAccount": "",
+            "encryptName": "v3_020b3826fd03010000000000e04128fddf4d90000000501ea9a3dba12f95f6b60a0536a1adb6b40fc4086288f46c0b89e6c4eb8062bb1661b4b6fbab708dc4f89d543d7ade135b2be74c14b9cfe3accef377b9@stranger",
+            "nickname": "文件传输助手",
+            "pinyin": "WJCSZS",
+            "pinyinAll": "wenjianchuanshuzhushou",
+            "reserved1": 1,
+            "reserved2": 1,
+            "type": 3,
+            "verifyFlag": 0,
+            "wxid": "filehelper"
+        }
+    ].
+    "msg": "success"
+
+```
+
+#### 6.获取数据库信息**
+###### 接口功能
+> 获取数据库信息和句柄
+ 
+###### 接口地址
+> [/api/getDBInfo](/api/getDBInfo)
+
+###### HTTP请求方式
+> POST  JSON
+
+###### 请求参数
+|参数|必选|类型|说明|
+|---|---|---|---|
+
+
+###### 返回字段
+|返回字段|字段类型|说明                              |
+|---|---|---|
+|code|int|返回状态,0成功, 非0失败|
+|msg|string|返回信息|
+|data|array|好友信息|
+|&#8194;&#8194;databaseName|string|数据库名称|
+|&#8194;&#8194;handle|number|句柄|
+|&#8194;&#8194;tables|array|表信息|
+|&#8194;&#8194;&#8194;&#8194;name|string|表名|
+|&#8194;&#8194;&#8194;&#8194;rootpage|string|rootpage|
+|&#8194;&#8194;&#8194;&#8194;sql|string|ddl语句|
+|&#8194;&#8194;&#8194;&#8194;tableName|string|表名|
+
+
+###### 接口示例
+入参：
+``` javascript
+
+```
+响应：
+``` javascript
+{
+    "code": 1,
+    "data": [
+        {
+            "databaseName": "MicroMsg.db",
+            "handle": 1755003930784,
+            "tables": [
+                {
+                    "name": "Contact",
+                    "rootpage": "2",
+                    "sql": "CREATE TABLE Contact(UserName TEXT PRIMARY KEY ,Alias TEXT,EncryptUserName TEXT,DelFlag INTEGER DEFAULT 0,Type INTEGER DEFAULT 0,VerifyFlag INTEGER DEFAULT 0,Reserved1 INTEGER DEFAULT 0,Reserved2 INTEGER DEFAULT 0,Reserved3 TEXT,Reserved4 TEXT,Remark TEXT,NickName TEXT,LabelIDList TEXT,DomainList TEXT,ChatRoomType int,PYInitial TEXT,QuanPin TEXT,RemarkPYInitial TEXT,RemarkQuanPin TEXT,BigHeadImgUrl TEXT,SmallHeadImgUrl TEXT,HeadImgMd5 TEXT,ChatRoomNotify INTEGER DEFAULT 0,Reserved5 INTEGER DEFAULT 0,Reserved6 TEXT,Reserved7 TEXT,ExtraBuf BLOB,Reserved8 INTEGER DEFAULT 0,Reserved9 INTEGER DEFAULT 0,Reserved10 TEXT,Reserved11 TEXT)",
+                    "tableName": "Contact"
+                }
+            ]
+        }
+    ],
+    "msg":"success"
+}
 ```
