--- a/doc/3.9.5.81.md
+++ b/doc/3.9.5.81.md
@@ -164,7 +164,8 @@ data： 接口返回的数据
 |返回字段|字段类型|说明                              |
 |---|---|---|
 |code|int|返回状态,不为0成功, 0失败|
-|result|string|成功提示|
+|msg|string|成功提示|
+|data|object|null|
 
 
 ###### 接口示例
@@ -474,4 +475,42 @@ enableHttp=0时，使用ip，port的tcp服务回传消息。
     ],
     "msg": "success"
 }
+```
+
+
+#### 8.发送文件消息**
+###### 接口功能
+> 发送文件消息
+
+###### 接口地址
+> [/api/sendFileMsg](/api/sendFileMsg)
+
+###### HTTP请求方式
+> POST  JSON
+
+###### 请求参数
+|参数|必选|类型|说明|
+|---|---|---|---|
+|wxid |true |string| 接收人wxid |
+|filePath|true |string|文件绝对路径|
+
+###### 返回字段
+|返回字段|字段类型|说明                              |
+|---|---|---|
+|code|int|返回状态,不为0成功, 0失败|
+|msg|string|成功提示|
+|data|object|null|
+
+###### 接口示例
+
+入参：
+``` javascript
+{
+    "wxid": "filehelper",
+    "filePath": "c:\\test.zip"
+}
+```
+响应：
+``` javascript
+{"code":345686720,"msg":"success","data":null}
 ```
