--- a/doc/3.9.5.81.md
+++ b/doc/3.9.5.81.md
@@ -514,3 +514,131 @@ enableHttp=0时，使用ip，port的tcp服务回传消息。
 ``` javascript
 {"code":345686720,"msg":"success","data":null}
 ```
+
+
+#### 9.获取群详情**
+###### 接口功能
+> 获取群详情
+
+###### 接口地址
+> [/api/getChatRoomDetailInfo](/api/getChatRoomDetailInfo)
+
+###### HTTP请求方式
+> POST  JSON
+
+###### 请求参数
+|参数|必选|类型|说明|
+|---|---|---|---|
+|chatRoomId |true |string| 群id |
+
+
+###### 返回字段
+|返回字段|字段类型|说明                              |
+|---|---|---|
+|code|int|返回状态,1成功, -1失败|
+|msg|string|成功提示|
+|data|object|群详细内容|
+|&#8194;&#8194;chatRoomId|string|群id|
+|&#8194;&#8194;notice|string|公告通知|
+|&#8194;&#8194;admin|string|群管理|
+|&#8194;&#8194;xml|string|xml信息|
+
+###### 接口示例
+
+入参：
+``` javascript
+{
+    "chatRoomId": "12222@chatroom"
+}
+```
+响应：
+``` javascript
+{"code":345686720,"msg":"success","data":{
+    "chatRoomId":"12222@chatroom",
+    "notice":"test",
+    "admin":"wxid_122333",
+    "xml":"",
+}}
+```
+
+
+#### 10.添加群成员**
+###### 接口功能
+> 获取群详情
+
+###### 接口地址
+> [/api/addMemberToChatRoom](/api/addMemberToChatRoom)
+
+###### HTTP请求方式
+> POST  JSON
+
+###### 请求参数
+|参数|必选|类型|说明|
+|---|---|---|---|
+|chatRoomId |true |string| 群id |
+|memberIds |true |string| 成员id，多个用,分隔 |
+
+###### 返回字段
+|返回字段|字段类型|说明                              |
+|---|---|---|
+|code|int|返回状态,1成功,负数失败|
+|msg|string|成功提示|
+|data|object|null|
+
+
+###### 接口示例
+
+入参：
+``` javascript
+{
+    "chatRoomId":"21363231004@chatroom",
+    "memberIds":"wxid_oyb662qhop4422"
+}
+```
+响应：
+``` javascript
+{"code":1,"msg":"success","data":null}
+```
+
+
+#### 11.修改群昵称**
+###### 接口功能
+> 修改群昵称
+
+###### 接口地址
+> [/api/modifyNickname](/api/modifyNickname)
+
+###### HTTP请求方式
+> POST  JSON
+
+###### 请求参数
+|参数|必选|类型|说明|
+|---|---|---|---|
+|chatRoomId |true |string| 群id |
+|wxid |true |string| 自己的wxid |
+|nickName |true |string| 昵称 |
+
+
+###### 返回字段
+|返回字段|字段类型|说明                              |
+|---|---|---|
+|code|int|返回状态,1成功, -1失败|
+|msg|string|成功提示|
+|data|object|null|
+
+
+###### 接口示例
+
+入参：
+``` javascript
+
+{
+    "chatRoomId":"31004@chatroom",
+    "wxid":"wxid_2721221512",
+    "nickName":"1221"
+}
+```
+响应：
+``` javascript
+{"code":1,"msg":"success","data":null}
+```
