feat: 群消息置顶

--- a/doc/3.9.5.81.md
+++ b/doc/3.9.5.81.md
@@ -737,3 +737,93 @@ enableHttp=0时，使用ip，port的tcp服务回传消息。
     "msg": "success"
 }
 ```
+
+#### 14.置顶群消息**
+###### 接口功能
+> 置顶群消息，需要群主权限
+
+###### 接口地址
+> [/api/topMsg](/api/topMsg)
+
+###### HTTP请求方式
+> POST  JSON
+
+###### 请求参数
+|参数|必选|类型|说明|
+|---|---|---|---|
+|msgId |true |string| 消息id |
+
+
+
+###### 返回字段
+|返回字段|字段类型|说明                              |
+|---|---|---|
+|code|int|返回状态,1成功, -1失败|
+|msg|string|成功提示|
+|data|object|null|
+
+
+###### 接口示例
+
+入参：
+``` javascript
+
+
+{
+    "msgId":8005736725060623215
+}
+```
+响应：
+``` javascript
+{
+    "code": 1,
+    "data": null,
+    "msg": "success"
+}
+```
+
+
+#### 15.移除置顶群消息**
+###### 接口功能
+> 移除置顶群消息，需要群主权限
+
+###### 接口地址
+> [/api/removeTopMsg](/api/removeTopMsg)
+
+###### HTTP请求方式
+> POST  JSON
+
+###### 请求参数
+|参数|必选|类型|说明|
+|---|---|---|---|
+|msgId |true |string| 消息id |
+|chatRoomId |true |string| 群id |
+
+
+###### 返回字段
+|返回字段|字段类型|说明                              |
+|---|---|---|
+|code|int|返回状态,1成功, -1失败|
+|msg|string|成功提示|
+|data|object|null|
+
+
+###### 接口示例
+
+入参：
+``` javascript
+
+
+{
+    "msgId":8005736725060623215，
+     "chatRoomId":"12345678@chatroom"
+}
+```
+响应：
+``` javascript
+{
+    "code": 1,
+    "data": null,
+    "msg": "success"
+}
+```
