--- a/doc/3.9.5.81.md
+++ b/doc/3.9.5.81.md
@@ -815,7 +815,7 @@ enableHttp=0时，使用ip，port的tcp服务回传消息。
 
 
 {
-    "msgId":8005736725060623215，
+    "msgId":8005736725060623215,
      "chatRoomId":"12345678@chatroom"
 }
 ```
@@ -823,6 +823,133 @@ enableHttp=0时，使用ip，port的tcp服务回传消息。
 ``` javascript
 {
     "code": 1,
+    "data": null,
+    "msg": "success"
+}
+```
+
+#### 16.邀请入群**
+###### 接口功能
+> 邀请入群，（40人以上的群需要使用邀请入群）
+
+###### 接口地址
+> [/api/InviteMemberToChatRoom](/api/InviteMemberToChatRoom)
+
+###### HTTP请求方式
+> POST  JSON
+
+###### 请求参数
+|参数|必选|类型|说明|
+|---|---|---|---|
+|memberIds |true |string| wxid，用,分隔 |
+|chatRoomId |true |string| 群id |
+
+
+###### 返回字段
+|返回字段|字段类型|说明                              |
+|---|---|---|
+|code|int|返回状态,1成功, -1失败|
+|msg|string|成功提示|
+|data|object|null|
+
+
+###### 接口示例
+
+入参：
+``` javascript
+
+
+{
+    "memberIds":"wxid_123,wxid_12341",
+     "chatRoomId":"12345678@chatroom"
+}
+```
+响应：
+``` javascript
+{
+    "code": 1,
+    "data": null,
+    "msg": "success"
+}
+```
+
+
+#### 16.hook日志**
+###### 接口功能
+> hook微信日志，输出在wechat安装目录的logs目录下
+
+###### 接口地址
+> [/api/hookLog](/api/hookLog)
+
+###### HTTP请求方式
+> POST  JSON
+
+###### 请求参数
+|参数|必选|类型|说明|
+|---|---|---|---|
+
+
+
+###### 返回字段
+|返回字段|字段类型|说明                              |
+|---|---|---|
+|code|int|返回状态,0成功, -1失败|
+|msg|string|成功提示|
+|data|object|null|
+
+
+###### 接口示例
+
+入参：
+``` javascript
+
+
+
+```
+响应：
+``` javascript
+{
+    "code": 0,
+    "data": null,
+    "msg": "success"
+}
+```
+
+#### 18.取消hook日志**
+###### 接口功能
+> 取消hook日志
+
+###### 接口地址
+> [/api/unhookLog](/api/unhookLog)
+
+###### HTTP请求方式
+> POST  JSON
+
+###### 请求参数
+|参数|必选|类型|说明|
+|---|---|---|---|
+
+
+
+###### 返回字段
+|返回字段|字段类型|说明                              |
+|---|---|---|
+|code|int|返回状态,0成功, -1失败|
+|msg|string|成功提示|
+|data|object|null|
+
+
+###### 接口示例
+
+入参：
+``` javascript
+
+
+```
+响应：
+``` javascript
+{
+    "code": 0,
     "data": null,
     "msg": "success"
 }
