--- a/doc/3.9.5.81.md
+++ b/doc/3.9.5.81.md
@@ -874,7 +874,7 @@ enableHttp=0时，使用ip，port的tcp服务回传消息。
 ```
 
 
-#### 16.hook日志**
+#### 17.hook日志**
 ###### 接口功能
 > hook微信日志，输出在wechat安装目录的logs目录下
 
@@ -950,6 +950,46 @@ enableHttp=0时，使用ip，port的tcp服务回传消息。
 ``` javascript
 {
     "code": 0,
+    "data": null,
+    "msg": "success"
+}
+```
+
+#### 19.建群**
+###### 接口功能
+> 建群（不建议使用，容易被封，测试期间被封了，无法保证效果）
+
+###### 接口地址
+> [/api/createChatRoom](/api/createChatRoom)
+
+###### HTTP请求方式
+> POST  JSON
+
+###### 请求参数
+|参数|必选|类型|说明|
+|---|---|---|---|
+|memberIds|string|群成员id，以,分割|
+
+
+###### 返回字段
+|返回字段|字段类型|说明                              |
+|---|---|---|
+|code|int|返回状态,0成功, -1失败|
+|msg|string|成功提示|
+|data|object|null|
+
+
+###### 接口示例
+
+入参：
+``` javascript
+
+
+```
+响应：
+``` javascript
+{
+    "code": 1,
     "data": null,
     "msg": "success"
 }
