--- a/doc/3.9.5.81.md
+++ b/doc/3.9.5.81.md
@@ -215,7 +215,7 @@ enableHttp=0时，使用ip，port的tcp服务回传消息。
 入参：
 ``` javascript
 {
-    "port": "19099"
+    "port": "19099",
     "ip":"127.0.0.1",
     "url":"http://localhost:8080",
     "timeout":"3000",
