--- a/doc/3.9.5.81.md
+++ b/doc/3.9.5.81.md
@@ -994,3 +994,89 @@ enableHttp=0时，使用ip，port的tcp服务回传消息。
     "msg": "success"
 }
 ```
+
+#### 20.退群**
+###### 接口功能
+> 退群
+
+###### 接口地址
+> [/api/quitChatRoom](/api/quitChatRoom)
+
+###### HTTP请求方式
+> POST  JSON
+
+###### 请求参数
+|参数|必选|类型|说明|
+|---|---|---|---|
+|chatRoomId|string|群id|
+
+
+###### 返回字段
+|返回字段|字段类型|说明                              |
+|---|---|---|
+|code|int|返回状态,大于0成功, -1失败|
+|msg|string|成功提示|
+|data|object|null|
+
+
+###### 接口示例
+
+入参：
+``` javascript
+{
+    "chatRoomId":"123456@chatroom"
+}
+
+```
+响应：
+``` javascript
+{
+    "code": 119536579329,
+    "data": null,
+    "msg": "success"
+}
+```
+
+#### 21.转发消息**
+###### 接口功能
+> 转发消息
+
+###### 接口地址
+> [/api/forwardMsg](/api/forwardMsg)
+
+###### HTTP请求方式
+> POST  JSON
+
+###### 请求参数
+|参数|必选|类型|说明|
+|---|---|---|---|
+|wxid|string|接收人id|
+|msgId|string|消息id|
+
+
+###### 返回字段
+|返回字段|字段类型|说明                              |
+|---|---|---|
+|code|int|返回状态,1成功, -1失败|
+|msg|string|成功提示|
+|data|object|null|
+
+
+###### 接口示例
+
+入参：
+``` javascript
+{
+    "wxid":"filehelper",
+    "msgId":"1233312233123"
+}
+
+```
+响应：
+``` javascript
+{
+    "code": 1,
+    "data": null,
+    "msg": "success"
+}
+```
