--- a/doc/3.9.5.81.md
+++ b/doc/3.9.5.81.md
@@ -1176,3 +1176,93 @@ enableHttp=0时，使用ip，port的tcp服务回传消息。
     "msg": "success"
 }
 ```
+
+
+#### 24.收藏消息**
+###### 接口功能
+> 收藏消息
+
+###### 接口地址
+> [/api/addFavFromMsg](/api/addFavFromMsg)
+
+###### HTTP请求方式
+> POST  JSON
+
+###### 请求参数
+|参数|必选|类型|说明|
+|---|---|---|---|
+|msgId|number|消息id|
+
+
+
+###### 返回字段
+|返回字段|字段类型|说明                              |
+|---|---|---|
+|code|int|返回状态,1成功, -1失败|
+|msg|string|成功提示|
+|data|object|null|
+
+
+###### 接口示例
+
+入参：
+``` javascript
+{
+
+    "msgId":123
+}
+
+```
+响应：
+``` javascript
+{
+    "code": 1,
+    "data": null,
+    "msg": "success"
+}
+```
+
+#### 24.收藏图片**
+###### 接口功能
+> 收藏图片
+
+###### 接口地址
+> [/api/addFavFromImage](/api/addFavFromImage)
+
+###### HTTP请求方式
+> POST  JSON
+
+###### 请求参数
+|参数|必选|类型|说明|
+|---|---|---|---|
+|wxid|string|wxid|
+|imagePath|string|图片地址|
+
+
+###### 返回字段
+|返回字段|字段类型|说明                              |
+|---|---|---|
+|code|int|返回状态,1成功, -1失败|
+|msg|string|成功提示|
+|data|object|null|
+
+
+###### 接口示例
+
+入参：
+``` javascript
+{
+
+    "wxid":"wxid_12333",
+    "imagePath":"C:\\test\\test.png"
+}
+
+```
+响应：
+``` javascript
+{
+    "code": 1,
+    "data": null,
+    "msg": "success"
+}
+```
