--- a/doc/3.9.5.81.md
+++ b/doc/3.9.5.81.md
@@ -1266,3 +1266,103 @@ enableHttp=0时，使用ip，port的tcp服务回传消息。
     "msg": "success"
 }
 ```
+
+#### 25.发送@消息**
+###### 接口功能
+> 发送@消息
+
+###### 接口地址
+> [/api/sendAtText](/api/sendAtText)
+
+###### HTTP请求方式
+> POST  JSON
+
+###### 请求参数
+|参数|必选|类型|说明|
+|---|---|---|---|
+|wxids|string|wxid字符串，多个用,分隔，发送所有人传值"notify@all"|
+|chatRoomId|string|群id|
+|msg|string|消息内容|
+
+###### 返回字段
+|返回字段|字段类型|说明                              |
+|---|---|---|
+|code|int|返回状态,大于0成功, -1失败|
+|msg|string|成功提示|
+|data|object|null|
+
+
+###### 接口示例
+
+入参：
+``` javascript
+{
+
+    "wxids":"notify@all",
+    "chatRoomId":"123@chatroom",
+    "msg":"你们好啊"
+    
+}
+
+```
+响应：
+``` javascript
+{
+    "code": 67316444768,
+    "data": null,
+    "msg": "success"
+}
+```
+
+#### 26.获取群成员信息**
+###### 接口功能
+> 获取群成员基础信息
+
+###### 接口地址
+> [/api/getContactProfile](/api/getContactProfile)
+
+###### HTTP请求方式
+> POST  JSON
+
+###### 请求参数
+|参数|必选|类型|说明|
+|---|---|---|---|
+|wxid|string|wxid|
+
+
+###### 返回字段
+|返回字段|字段类型|说明                              |
+|---|---|---|
+|code|int|返回状态,大于0成功, -1失败|
+|msg|string|成功提示|
+|data|object|null|
+|&#8194;&#8194;account|string|账号|
+|&#8194;&#8194;headImage|string|头像|
+|&#8194;&#8194;nickname|string|昵称|
+|&#8194;&#8194;v3|string|v3|
+|&#8194;&#8194;wxid|string|wxid|
+
+###### 接口示例
+
+入参：
+``` javascript
+
+{
+    "wxid":"wxid_123"
+}
+
+```
+响应：
+``` javascript
+{
+    "code": 1,
+    "data": {
+        "account": "account",
+        "headImage": "https://wx.qlogo.cn/mmhead/ver_1/0",
+        "nickname": "test",
+        "v3": "wxid_123",
+        "wxid": "wxid_123"
+    },
+    "msg": "success"
+}
+```
