feat:新增发送公众号消息，下载附件，图片解码，获取语音，发送自定义表情

--- a/doc/3.9.5.81.md
+++ b/doc/3.9.5.81.md
@@ -1366,3 +1366,318 @@ enableHttp=0时，使用ip，port的tcp服务回传消息。
     "msg": "success"
 }
 ```
+
+#### 27.发送公众号消息**
+###### 接口功能
+> 自定义发送公众号消息
+
+###### 接口地址
+> [/api/forwardPublicMsg](/api/forwardPublicMsg)
+
+###### HTTP请求方式
+> POST  JSON
+
+###### 请求参数
+|参数|必选|类型|说明|
+|---|---|---|---|
+|appName|string|公众号id，消息内容里的appname|
+|userName|string|公众号昵称，消息内容里的username|
+|title|string|链接地址，消息内容里的title|
+|url|string|链接地址，消息内容里的url|
+|thumbUrl|string|缩略图地址，消息内容里的thumburl|
+|digest|string|摘要，消息内容里的digest|
+|wxid|string|wxid|
+
+###### 返回字段
+|返回字段|字段类型|说明                              |
+|---|---|---|
+|code|int|返回状态,大于0成功, -1失败|
+|msg|string|成功提示|
+|data|object|null|
+
+###### 接口示例
+
+入参：
+``` javascript
+
+{
+    "appName": "快手",
+    "userName": "gh_271633",
+    "title": "PC硬件、数码产品彻底反转",
+    "url": "http://mp.weixin.qq.com/s?__biz=Mzg3MzYg==&mid=22440&idx=1&sn=bd8e8b0d9f2753f3c340&chksm=ced16f2ff9a6e639cc9bb76631ff03487f86486f0f29fcf9f8bed754354cb20eda31cc894a56&scene=0&xtrack=1#rd",
+    "thumbUrl": "https://mmbiz.qpic.cn/sz__jpg/tpzwaqMCicQyEkpxmpmmP9KgoBHiciamYhqZ0ff4kNlozxgRq4AtEzibo4iaw/640?wxtype=jpeg&wxfrom=0",
+    "digest": "这谁顶得住？",
+    "wxid": "filehelper"
+}
+
+```
+响应：
+``` javascript
+{
+    "code": 1,
+    "data": {},
+    "msg": "success"
+}
+```
+
+#### 28.转发公众号消息**
+###### 接口功能
+> 转发公众号消息
+
+###### 接口地址
+> [/api/forwardPublicMsgByMsgId](/api/forwardPublicMsgByMsgId)
+
+###### HTTP请求方式
+> POST  JSON
+
+###### 请求参数
+|参数|必选|类型|说明|
+|---|---|---|---|
+|msgId|number|msgId|
+|wxid|string|wxid|
+
+###### 返回字段
+|返回字段|字段类型|说明                              |
+|---|---|---|
+|code|int|返回状态,大于0成功, -1失败|
+|msg|string|成功提示|
+|data|object|null|
+
+###### 接口示例
+
+入参：
+``` javascript
+
+{
+   "msgId": 8871595889497690337,
+    "wxid": "filehelper"
+}
+
+```
+响应：
+``` javascript
+{
+    "code": 1,
+    "data": {},
+    "msg": "success"
+}
+```
+
+#### 29.下载附件**
+###### 接口功能
+> 下载附件，保存在微信文件目录下  wxid_xxx/wxhelper 目录下
+
+###### 接口地址
+> [/api/downloadAttach](/api/downloadAttach)
+
+###### HTTP请求方式
+> POST  JSON
+
+###### 请求参数
+|参数|必选|类型|说明|
+|---|---|---|---|
+|msgId|number|msgId|
+
+
+###### 返回字段
+|返回字段|字段类型|说明                              |
+|---|---|---|
+|code|int|返回状态,大于0成功, -1失败|
+|msg|string|成功提示|
+|data|object|null|
+
+###### 接口示例
+
+入参：
+``` javascript
+
+{
+   "msgId": 887159588949767
+}
+
+```
+响应：
+``` javascript
+{
+    "code": 1,
+    "data": {},
+    "msg": "success"
+}
+```
+
+
+#### 30.解码图片**
+###### 接口功能
+> 解码图片
+
+###### 接口地址
+> [/api/decodeImage](/api/decodeImage)
+
+###### HTTP请求方式
+> POST  JSON
+
+###### 请求参数
+|参数|必选|类型|说明|
+|---|---|---|---|
+|filePath|string|待解码图片地址|
+|storeDir|string|解码后图片的存储目录|
+
+
+###### 返回字段
+|返回字段|字段类型|说明                              |
+|---|---|---|
+|code|int|返回状态,大于0成功, -1失败|
+|msg|string|成功提示|
+|data|object|null|
+
+###### 接口示例
+
+入参：
+``` javascript
+
+{
+   "filePath": "C:\\886206666148161980131.dat",
+   "storeDir":"C:\\test"
+}
+
+```
+响应：
+``` javascript
+{
+    "code": 1,
+    "data": {},
+    "msg": "success"
+}
+```
+
+#### 31.获取语音**
+###### 接口功能
+> 获取语音，SILK v3格式,可自行转换mp3格式
+
+###### 接口地址
+> [/api/getVoiceByMsgId](/api/getVoiceByMsgId)
+
+###### HTTP请求方式
+> POST  JSON
+
+###### 请求参数
+|参数|必选|类型|说明|
+|---|---|---|---|
+|msgId|number|消息id|
+|storeDir|string|语音的存储目录|
+
+
+###### 返回字段
+|返回字段|字段类型|说明                              |
+|---|---|---|
+|code|int|返回状态,大于0成功, -1失败|
+|msg|string|成功提示|
+|data|object|null|
+
+###### 接口示例
+
+入参：
+``` javascript
+
+{
+"msgId":78804324411226,
+"storeDir":"c:\\test"
+}
+
+```
+响应：
+``` javascript
+{
+    "code": 1,
+    "data": {},
+    "msg": "success"
+}
+```
+
+#### 32.发送图片**
+###### 接口功能
+> 发送图片
+
+###### 接口地址
+> [/api/sendImagesMsg](/api/sendImagesMsg)
+
+###### HTTP请求方式
+> POST  JSON
+
+###### 请求参数
+|参数|必选|类型|说明|
+|---|---|---|---|
+|wxid|string|wxid|
+|imagePath|string|图片路径|
+
+
+###### 返回字段
+|返回字段|字段类型|说明                              |
+|---|---|---|
+|code|int|返回状态,大于0成功, -1失败|
+|msg|string|成功提示|
+|data|object|null|
+
+###### 接口示例
+
+入参：
+``` javascript
+
+{
+    "wxid":"filehelper",
+    "imagePath":"C:\\test.png"
+}
+
+```
+响应：
+``` javascript
+{
+    "code": 1,
+    "data": {},
+    "msg": "success"
+}
+```
+
+#### 33.发送自定义表情**
+###### 接口功能
+> 发送自定义表情
+
+###### 接口地址
+> [/api/sendCustomEmotion](/api/sendCustomEmotion)
+
+###### HTTP请求方式
+> POST  JSON
+
+###### 请求参数
+|参数|必选|类型|说明|
+|---|---|---|---|
+|wxid|string|wxid|
+|filePath|string|表情路径，可以直接查询CustomEmotion表的MD5字段,路径规则见下面示例|
+
+
+###### 返回字段
+|返回字段|字段类型|说明                              |
+|---|---|---|
+|code|int|返回状态,大于0成功, -1失败|
+|msg|string|成功提示|
+|data|object|null|
+
+###### 接口示例
+
+入参：
+``` javascript
+
+{
+    "wxid":"filehelper",
+    "filePath":"C:\\wechatDir\\WeChat Files\\wxid_123\\FileStorage\\CustomEmotion\\8F\\8F6423BC2E69188DCAC797E279C81DE9"
+}
+
+```
+响应：
+``` javascript
+{
+    "code": 1,
+    "data": {},
+    "msg": "success"
+}
+```
