feat: 发送小程序(待完善)

--- a/doc/3.9.5.81.md
+++ b/doc/3.9.5.81.md
@@ -1681,3 +1681,60 @@ enableHttp=0时，使用ip，port的tcp服务回传消息。
     "msg": "success"
 }
 ```
+
+
+#### 34.发送小程序**
+###### 接口功能
+> 发送小程序（待完善，不稳定）,相关参数可以参考示例的滴滴小程序的内容自行组装。
+
+###### 接口地址
+> [/api/sendCustomEmotion](/api/sendApplet)
+
+###### HTTP请求方式
+> POST  JSON
+
+###### 请求参数
+|参数|必选|类型|说明|
+|---|---|---|---|
+|wxid|string|接收人wxid|
+|waidConcat|string|app的wxid与回调信息之类绑定的拼接字符串，伪造的数据可以随意|
+|appletWxid|string|app的wxid|
+|jsonParam|string|相关参数|
+|headImgUrl|string|头像url|
+|mainImg|string|主图的本地路径,需要在小程序的临时目录下|
+|indexPage|string|小程序的跳转页面|
+
+
+
+###### 返回字段
+|返回字段|字段类型|说明                              |
+|---|---|---|
+|code|int|返回状态,大于0成功, -1失败|
+|msg|string|成功提示|
+|data|object|null|
+
+###### 接口示例
+
+入参：
+``` javascript
+
+{
+"wxid":"filehelper",
+"waidConcat":"wxaf35009675aa0b2a_118",
+"waid":"wxaf35009675aa0b2a",
+"appletWxid":"gh_7a5c4141778f@app",
+"jsonParam":"{\"current_path\":\"home/pages/index.html\",\"current_title\":\"\",\"image_url\":\"https://ut-static.udache.com/webx/mini-pics/U7mDFxU2yh-2-r1BJ-J0X.png\",\"scene\":1001,\"scene_note\":\"\",\"sessionId\":\"SessionId@1672284921_1#1692848476899\"}",
+"headImgUrl":"http://mmbiz.qpic.cn/sz_mmbiz_png/9n47wQlh4dH8afD9dQ9uQicibRm5mYz3lawXCLMjmnzFicribH51qsFYxjzPEcTGHGmgX4lkAkQ3jznia8UDEtqsX1w/640?wx_fmt=png&wxfrom=200",
+"mainImg":"C:\\wxid_123123\\Applet\\wxaf35009675aa0b2a\\temp\\2.png",
+"indexPage":"pages/index/index.html"
+}
+
+```
+响应：
+``` javascript
+{
+    "code": 1,
+    "data": {},
+    "msg": "success"
+}
+```
