--- a/doc/3.9.8.25.md
+++ b/doc/3.9.8.25.md
@@ -1,6 +1,31 @@
+#### 编译构建
+环境：
+cl.exe目录= c:/cl.exe  
+ml64.exe目录 =c:/ml64.exe  
+vcpkg目录 = c:/vcpkg
+wxhelper目录 = c:/wxhelper
+```
 
+vcpkg  install detours:x64-windows 
+vcpkg  install nlohmann-json:x64-windows
 
-##  3.9.7.29版本，http接口文档，文档仅供参考。   
+cd wxhelper  
+mkdir build  
+cd build  
+cmake -DCMAKE_C_COMPILER=cl.exe  \
+-DCMAKE_CXX_COMPILER=cl.exe \
+-DCMAKE_ASM_MASM_COMPILER=ml64.exe \
+-DCMAKE_BUILD_TYPE=Debug \
+-DCMAKE_INSTALL_PREFIX=C:/wxhelper/install/x64-debug \
+-DCMAKE_TOOLCHAIN_FILE:FILEPATH=C:/vcpkg/scripts/buildsystems/vcpkg.cmake \
+-SC:c:/wxhelper \
+-BC:c:/wxhelper/build/x64-debug\
+-G Ninja  
+cmake --build ..  
+```
+如果有错误按错误提示修正即可。   
+
+##  3.9.5.81版本，http接口文档，文档仅供参考。   
 
 ### 简单说明：   
  所有接口只支持post方法。  
@@ -21,14 +46,6 @@ code： 错误码
 msg：  成功/错误信息   
 data： 接口返回的数据   
 
-   
-接口与3.9.5.81基本无变化，优化了httpclient连接。 
-config.ini 配置文件可以配置http服务端口和隐藏dll
-```
-Port=19088
-HiddenDll=0 //1隐藏 0不隐藏
-
-```
 
 
 #### 0.检查微信登录**
@@ -65,6 +82,7 @@ HiddenDll=0 //1隐藏 0不隐藏
     "data":null
 }
 ```
+
 
 #### 1.获取登录用户信息**
 ###### 接口功能
@@ -116,16 +134,17 @@ HiddenDll=0 //1隐藏 0不隐藏
         "dataSavePath": "C:\\wechatDir\\WeChat Files\\",
         "dbKey": "965715e30e474da09250cb5aa047e3940ffa1c8f767c4263b132bb512933db49",
         "headImage": "https://wx.qlogo.cn/mmhead/ver_1/MiblV0loY0GILewQ4u2121",
-        "mobile": "13913913913",
+        "mobile": "13912341234",
         "name": "xxx",
         "province": "Henan",
         "signature": "xxx",
-        "wxid": "wxid_22222"
+        "wxid": "wxid_22222",
+        "privateKey":"-----BEGIN RSA PRIVATE KEY-----\nMIICXAIBAAKBgQCsC8wKKfylbnl0QpcowI4XDoCMlDptEeVq1aY0w9nR62llfjVL\nKIDbHMf9+tCxv5MWBuxrZgldzLkSQ/M5XwL5HQrO+XTj9Sx/ -END RSA PRIVATE KEY-----\n",
+        "publicKey":"-----BEGIN PUBLIC KEY-----\nMIGfMA0GCSqGSIb3DQEBAQAB\n-----END PUBLIC KEY-----\n"
     },
     "msg": "success"
 }
 ```
-
 
 
 #### 2.发送文本消息**
@@ -185,7 +204,7 @@ enableHttp=0时，使用ip，port的tcp服务回传消息。
 |ip |true |string| 服务端ip地址，用来接收消息内容，可以是任意ip,即tcp客户端连接的服务端的ip|
 |url |true |string| http的请求地址，enableHttp=1时，不能为空 |
 |timeout |true |string| 超时时间，单位ms|
-|enableHttp |true |number| 0/1 ：1.启用http 0.不启用http|
+|enableHttp |true |bool| true/false ：true.启用http false.不启用http|
 
 ###### 返回字段
 |返回字段|字段类型|说明                              |
@@ -203,7 +222,7 @@ enableHttp=0时，使用ip，port的tcp服务回传消息。
     "ip":"127.0.0.1",
     "url":"http://localhost:8080",
     "timeout":"3000",
-    "enableHttp":"0"
+    "enableHttp":false
 }
 ```
 响应：
