--- a/doc/3.9.8.25.md
+++ b/doc/3.9.8.25.md
@@ -479,3 +479,80 @@ enableHttp=0时，使用ip，port的tcp服务回传消息。
     "msg": "success"
 }
 ```
+
+
+#### 8.锁定微信**
+###### 接口功能
+> 锁定微信
+ 
+###### 接口地址
+> [/api/execSql](/api/lockWeChat)
+
+###### HTTP请求方式
+> POST  JSON
+
+###### 请求参数
+|参数|必选|类型|说明|
+|---|---|---|---|
+
+
+###### 返回字段
+|返回字段|字段类型|说明                              |
+|---|---|---|
+|code|int|返回状态,大于0成功, 小于0失败|
+|msg|string|返回信息|
+|data|object|null|
+
+
+
+###### 接口示例
+入参：
+``` javascript
+
+```
+响应：
+``` javascript
+{
+    "code": 2,
+    "data": null,
+    "msg": "success"
+}
+```
+
+#### 9.解锁微信**
+###### 接口功能
+> 锁定微信
+ 
+###### 接口地址
+> [/api/execSql](/api/unlockWeChat)
+
+###### HTTP请求方式
+> POST  JSON
+
+###### 请求参数
+|参数|必选|类型|说明|
+|---|---|---|---|
+
+
+###### 返回字段
+|返回字段|字段类型|说明                              |
+|---|---|---|
+|code|int|返回状态,大于0成功, 小于0失败|
+|msg|string|返回信息|
+|data|object|null|
+
+
+
+###### 接口示例
+入参：
+``` javascript
+
+```
+响应：
+``` javascript
+{
+    "code": 2,
+    "data": null,
+    "msg": "success"
+}
+```
